# bricks

./: CMakeLists.txt  LICENSE  README.md
include/: GameBoard.h  Piece.h  Style.h
src/: CMakeLists.txt  GameBoard.cpp  Piece.cpp  Style.cpp  Tetris.cpp
src/examples/: color_example.c  window_example.cpp
