SET(CURSES_NEED_NCURSES TRUE)
FIND_PACKAGE(Curses)

#SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_MULTITHREADED ON)
FIND_PACKAGE(Boost 1.57.0 REQUIRED COMPONENTS thread system)

if(Boost_FOUND)
	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
	INCLUDE_DIRECTORIES(${CURSES_INCLUDE_DIR})
	ADD_EXECUTABLE(Tetris Tetris.cpp GameBoard.cpp Piece.cpp Style.cpp)
	TARGET_LINK_LIBRARIES(Tetris ${Boost_LIBRARIES} ncurses)
endif()
